--- a/signup/style.css
+++ b/signup/style.css
@@ -1,58 +1,3 @@
-/* NavBar  */
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    text-decoration: none;
-    list-style-type: none;
-}
-
-body {
-    background-color: rgb(27, 2, 27);
-    color: rgb(252, 245, 245);
-}
-
-
-
-/* regForm  */
-.heading{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 20px;
-}
-
-.regForm {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    margin-top: 60px;
-}
-.form-Style {
-    background-color: #11101b;
-    height: 300px;
-    width: 500px;
-    margin: 10px;
-    padding: 20px;
-    text-align: center;
-    border: 2px solid black;
-    border-radius: 10px;
-}
-
 input {
-    width: 300px;
-    padding: 5px;
-    border-radius: 5px;
-    margin: 10px;
-}
-
-.regForm :hover{
-    background-image:linear-gradient(rgb(0, 0, 110), rgb(0, 49, 0), rgb(75, 71, 71)) ;
-}
-.submit {
-    padding: 3px;
-    margin-top: 10px;
-    width: 100px;
+    width: 100%;
 }
