--- a/signup/style.css
+++ b/signup/style.css
@@ -1,3 +1,28 @@
+body {
+    background-color: rgb(27, 2, 27);
+    color: rgb(252, 245, 245);
+}
+
+
 input {
     width: 100%;
 }
+
+.form {
+    color: black;
+    background-color: rgb(150, 145, 145);
+    border: 10px solid black;
+    padding: 10px;
+}
+
+
+.form :hover{
+
+    background-color: rgb(234, 231, 238);
+    border-radius: 5px;
+
+}
+.container {
+    margin-top: 100px;
+}
+
