--- a/login/style.css
+++ b/login/style.css
@@ -6,3 +6,21 @@ body {
 input {
     width: 100%;
 }
+
+.container {
+    margin-top: 100px;
+}
+.form {
+    color: black;
+    background-color: rgb(150, 145, 145);
+    border: 10px solid black;
+    padding: 10px;
+}
+
+
+.form :hover{
+
+    background-color: rgb(234, 231, 238);
+    border-radius: 5px;
+
+}
